# notifications_android_tv

./: .pre-commit-config.yaml  CHANGES.rst  LICENSE  MANIFEST.in  README.MD  README.md  example.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yml  tests.yml
notifications_android_tv/: __init__.py  const.py  exceptions.py  notifications.py
tests/: __init__.py  test_notifications.py
