[tool.poetry]
name = "notifications-android-tv"
version = "1.0.0"
description = "Python API for sending notifications to Android/Fire TVs"
authors = ["Rami Mosleh <engrbm87@gmail.com>"]
homepage = "https://github.com/engrbm87/notifications_android_tv"
repository = "https://github.com/engrbm87/notifications_android_tv/releases"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.23,<1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
pytest-httpx = ">0.15,<1"
pytest-asyncio = "^0.16.0"
isort = "^5.10.0"
mypy = "^0.971"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "notifications_android_tv/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'pyproject.toml',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
